NGSTACK-493 Don't repeat config if it has been already defined

--- a/bundle/Resources/views/ezadminui/js_config.html.twig
+++ b/bundle/Resources/views/ezadminui/js_config.html.twig
@@ -1,104 +1,108 @@
 {% trans_default_domain 'ngremotemedia' %}
 
 <script type="text/javascript">
-    {% set available_variations = [] %}
-    {% set available_editor_variations = [] %}
+    if (typeof NgRemoteMediaTranslations === 'undefined') {
+        NgRemoteMediaTranslations = {
+            'browse_title': "{{ "ngrm.edit.vue.browse.title"|trans }}",
+            'browse_image_and_documents': "{{ "ngrm.edit.vue.browse.facets.image_and_documents"|trans }}",
+            'browse_video_and_audio': "{{ "ngrm.edit.vue.browse.facets.video_and_audio"|trans }}",
+            'browse_raw': "{{ "ngrm.edit.vue.browse.facets.raw"|trans }}",
+            'browse_select_media_type': "{{ "ngrm.edit.vue.browse.facets.select_media_type"|trans }}",
+            'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
+            'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
+            'browse_loading_folders': "{{ "ngrm.edit.vue.browse.facets.loading_folders"|trans }}",
+            'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
+            'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
+            'browse_loading_tags': "{{ "ngrm.edit.vue.browse.facets.loading_tags"|trans }}",
+            'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
+            'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
+            'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
+            'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
+            'browse_empty_folder_hint': "{{ "ngrm.edit.vue.browse.empty_folder_hint"|trans }}",
+            'browse_select': "{{ "ngrm.edit.vue.browse.select"|trans }}",
+            'load_more': "{{ "ngrm.edit.vue.browse.load_more"|trans }}",
+            'crop_reset': "{{ "ngrm.edit.vue.crop.reset"|trans }}",
+            'crop_apply': "{{ "ngrm.edit.vue.crop.apply"|trans }}",
+            'crop_cancel': "{{ "ngrm.edit.vue.crop.cancel"|trans }}",
+            'crop_add': "{{ "ngrm.edit.vue.crop.add"|trans }}",
+            'crop_preview': "{{ "ngrm.edit.vue.crop.preview"|trans }}",
+            'crop_save_sizes': "{{ "ngrm.edit.vue.crop.save_sizes"|trans }}",
+            'crop_add_size': "{{ "ngrm.edit.vue.crop.add_size"|trans }}",
+            'crop_added_for_confirmation': "{{ "ngrm.edit.vue.crop.added_for_confirmation"|trans }}",
+            'crop_media_too_small': "{{ "ngrm.edit.vue.crop.media_too_small"|trans }}",
+            'media_galery_empty_folder': "{{ "ngrm.edit.vue.media_gallery.empty_folder"|trans }}",
+            'media_galery_upload_media': "{{ "ngrm.edit.vue.media_gallery.upload_media"|trans }}",
+            'media_galery_select': "{{ "ngrm.edit.vue.media_gallery.select"|trans }}",
+            'media_galery_load_more': "{{ "ngrm.edit.vue.media_gallery.load_more"|trans }}",
+            'Search for media': "Search for media",
+            'Load more': "Load more",
+            'Upload new media': 'Upload new media',
+            'No results': 'No results',
+            'Alternate text': 'Alternate text',
+            'Class': 'CSS class',
+            'Create new folder?': 'Create new folder?',
+            'Folder': 'Folder',
+            'All': 'All',
+            'Add tag': 'Add tag',
+            'Media type': 'Media type',
+            'Image': 'Image and documents',
+            'Video': 'Video',
+            'Loading...': 'Loading...',
+            'Cancel': 'Cancel',
+            'Save all': 'Save all',
+            'Generate': 'Generate',
+            'Caption': 'Caption',
+            'by': 'by',
+            'name': 'name',
+            'tag': 'tag',
+            'Image is to small for this version': 'Image is to small for this version',
+            'close': 'Close',
+            'next': 'Next 25 &gt;',
+            'prev': '&lt; Previous 25',
+            'interactions_scale': "{{ "ngrm.edit.vue.interactions.scale"|trans }}",
+            'interactions_no_media_selected': "{{ "ngrm.edit.vue.interactions.no_media_selected"|trans }}",
+            'interactions_remove_media': "{{ "ngrm.edit.vue.interactions.remove_media"|trans }}",
+            'interactions_select_media': "{{ "ngrm.edit.vue.interactions.select_media"|trans }}",
+            'interactions_manage_media': "{{ "ngrm.edit.vue.interactions.manage_media"|trans }}",
+            'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
+            'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
+            'preview_tags': "{{ "ngrm.edit.vue.preview.tags"|trans }}",
+            'preview_size': "{{ "ngrm.edit.vue.preview.size"|trans }}",
+            'upload_breadcrumbs_info': "{{ "ngrm.edit.vue.upload.breadcrumbs_info"|trans }}",
+            'upload_root_folder': "{{ "ngrm.edit.vue.upload.root_folder"|trans }}",
+            'upload_info_text': "{{ "ngrm.edit.vue.upload.info_text"|trans }}",
+            'upload_button_select': "{{ "ngrm.edit.vue.upload.button.select"|trans }}",
+            'upload_button_create': "{{ "ngrm.edit.vue.upload.button.create"|trans }}",
+            'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
+            'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
+            'editor_insert_variations_label': "{{ "ngrm.edit.vue.editor_insert.variations.label"|trans }}",
+            'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
+            'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
+            'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
+            'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.cancel"|trans }}",
+        };
+    }
 
-    {% if content_type_identifier is defined and content_type_identifier %}
+    if (typeof RemoteMediaConfig === 'undefined') {
+        {% set available_variations = [] %}
+        {% set available_editor_variations = [] %}
+
+        {% if content_type_identifier is defined and content_type_identifier %}
         {% set available_variations = ngrm_available_variations(content_type_identifier, true) %}
         {% set available_editor_variations = ngrm_available_variations(content_type_identifier) %}
-    {% endif %}
+        {% endif %}
 
-    NgRemoteMediaTranslations = {
-        'browse_title': "{{ "ngrm.edit.vue.browse.title"|trans }}",
-        'browse_image_and_documents': "{{ "ngrm.edit.vue.browse.facets.image_and_documents"|trans }}",
-        'browse_video_and_audio': "{{ "ngrm.edit.vue.browse.facets.video_and_audio"|trans }}",
-        'browse_raw': "{{ "ngrm.edit.vue.browse.facets.raw"|trans }}",
-        'browse_select_media_type': "{{ "ngrm.edit.vue.browse.facets.select_media_type"|trans }}",
-        'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
-        'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
-        'browse_loading_folders': "{{ "ngrm.edit.vue.browse.facets.loading_folders"|trans }}",
-        'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
-        'browse_select_tag': "{{ "ngrm.edit.vue.browse.facets.select_tag"|trans }}",
-        'browse_loading_tags': "{{ "ngrm.edit.vue.browse.facets.loading_tags"|trans }}",
-        'browse_all_tags': "{{ "ngrm.edit.vue.browse.facets.all_tags"|trans }}",
-        'search': "{{ "ngrm.edit.vue.browse.facets.search"|trans }}",
-        'search_placeholder': "{{ "ngrm.edit.vue.browse.facets.search_placeholder"|trans }}",
-        'browse_empty_folder': "{{ "ngrm.edit.vue.browse.empty_folder"|trans }}",
-        'browse_empty_folder_hint': "{{ "ngrm.edit.vue.browse.empty_folder_hint"|trans }}",
-        'browse_select': "{{ "ngrm.edit.vue.browse.select"|trans }}",
-        'load_more': "{{ "ngrm.edit.vue.browse.load_more"|trans }}",
-        'crop_reset': "{{ "ngrm.edit.vue.crop.reset"|trans }}",
-        'crop_apply': "{{ "ngrm.edit.vue.crop.apply"|trans }}",
-        'crop_cancel': "{{ "ngrm.edit.vue.crop.cancel"|trans }}",
-        'crop_add': "{{ "ngrm.edit.vue.crop.add"|trans }}",
-        'crop_preview': "{{ "ngrm.edit.vue.crop.preview"|trans }}",
-        'crop_save_sizes': "{{ "ngrm.edit.vue.crop.save_sizes"|trans }}",
-        'crop_add_size': "{{ "ngrm.edit.vue.crop.add_size"|trans }}",
-        'crop_added_for_confirmation': "{{ "ngrm.edit.vue.crop.added_for_confirmation"|trans }}",
-        'crop_media_too_small': "{{ "ngrm.edit.vue.crop.media_too_small"|trans }}",
-        'media_galery_empty_folder': "{{ "ngrm.edit.vue.media_gallery.empty_folder"|trans }}",
-        'media_galery_upload_media': "{{ "ngrm.edit.vue.media_gallery.upload_media"|trans }}",
-        'media_galery_select': "{{ "ngrm.edit.vue.media_gallery.select"|trans }}",
-        'media_galery_load_more': "{{ "ngrm.edit.vue.media_gallery.load_more"|trans }}",
-        'Search for media': "Search for media",
-        'Load more': "Load more",
-        'Upload new media': 'Upload new media',
-        'No results': 'No results',
-        'Alternate text': 'Alternate text',
-        'Class': 'CSS class',
-        'Create new folder?': 'Create new folder?',
-        'Folder': 'Folder',
-        'All': 'All',
-        'Add tag': 'Add tag',
-        'Media type': 'Media type',
-        'Image': 'Image and documents',
-        'Video': 'Video',
-        'Loading...': 'Loading...',
-        'Cancel': 'Cancel',
-        'Save all': 'Save all',
-        'Generate': 'Generate',
-        'Caption': 'Caption',
-        'by': 'by',
-        'name': 'name',
-        'tag': 'tag',
-        'Image is to small for this version': 'Image is to small for this version',
-        'close': 'Close',
-        'next': 'Next 25 &gt;',
-        'prev': '&lt; Previous 25',
-        'interactions_scale': "{{ "ngrm.edit.vue.interactions.scale"|trans }}",
-        'interactions_no_media_selected': "{{ "ngrm.edit.vue.interactions.no_media_selected"|trans }}",
-        'interactions_remove_media': "{{ "ngrm.edit.vue.interactions.remove_media"|trans }}",
-        'interactions_select_media': "{{ "ngrm.edit.vue.interactions.select_media"|trans }}",
-        'interactions_manage_media': "{{ "ngrm.edit.vue.interactions.manage_media"|trans }}",
-        'interactions_quick_upload': "{{ "ngrm.edit.vue.interactions.quick_upload"|trans }}",
-        'preview_alternate_text': "{{ "ngrm.edit.vue.preview.alternate_text"|trans }}",
-        'preview_tags': "{{ "ngrm.edit.vue.preview.tags"|trans }}",
-        'preview_size': "{{ "ngrm.edit.vue.preview.size"|trans }}",
-        'upload_breadcrumbs_info': "{{ "ngrm.edit.vue.upload.breadcrumbs_info"|trans }}",
-        'upload_root_folder': "{{ "ngrm.edit.vue.upload.root_folder"|trans }}",
-        'upload_info_text': "{{ "ngrm.edit.vue.upload.info_text"|trans }}",
-        'upload_button_select': "{{ "ngrm.edit.vue.upload.button.select"|trans }}",
-        'upload_button_create': "{{ "ngrm.edit.vue.upload.button.create"|trans }}",
-        'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
-        'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
-        'editor_insert_variations_label': "{{ "ngrm.edit.vue.editor_insert.variations.label"|trans }}",
-        'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
-        'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
-        'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
-        'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.cancel"|trans }}",
-    };
-
-    RemoteMediaConfig = {
-        'paths': {
-            'browse': '{{ path('netgen_remote_media_ezadmin_browse') }}',
-            'load_facets': '{{ path('netgen_remote_media_ezadmin_facets_load') }}',
-            'load_folders': '{{ path('netgen_remote_media_ezadmin_folder_load') }}',
-            'create_folder': '{{ path('netgen_remote_media_ezadmin_folder_create') }}',
-            'editor_fetch': '{{ path('netgen_remote_media_ezadmin_editor_fetch') }}',
-            'editor_insert': '{{ path('netgen_remote_media_ezadmin_editor_insert') }}',
-        },
-        availableVariations: {{ available_variations|scaling_format|json_encode|raw }},
-        availableEditorVariations: {{ available_editor_variations|keys|json_encode|raw }}
-    };
+        RemoteMediaConfig = {
+            'paths': {
+                'browse': '{{ path('netgen_remote_media_ezadmin_browse') }}',
+                'load_facets': '{{ path('netgen_remote_media_ezadmin_facets_load') }}',
+                'load_folders': '{{ path('netgen_remote_media_ezadmin_folder_load') }}',
+                'create_folder': '{{ path('netgen_remote_media_ezadmin_folder_create') }}',
+                'editor_fetch': '{{ path('netgen_remote_media_ezadmin_editor_fetch') }}',
+                'editor_insert': '{{ path('netgen_remote_media_ezadmin_editor_insert') }}',
+            },
+            availableVariations: {{ available_variations|scaling_format|json_encode|raw }},
+            availableEditorVariations: {{ available_editor_variations|keys|json_encode|raw }}
+        };
+    }
 </script>
