NGSTACK-514 Improve media preview in admin to show waveform image

--- a/bundle/Resources/views/ezadminui/parts/edit/editor_insert.html.twig
+++ b/bundle/Resources/views/ezadminui/parts/edit/editor_insert.html.twig
@@ -4,8 +4,10 @@
         name: "",
         type: "image",
         mediaType: "image",
+        format: "",
         url: "",
         browse_url: "",
+        previewUrl: "",
         alternateText: "",
         tags: [],
         size: "",
