--- a/bundle/Resources/views/ezadminui/js_config.html.twig
+++ b/bundle/Resources/views/ezadminui/js_config.html.twig
@@ -84,13 +84,8 @@
     }
 
     if (typeof RemoteMediaConfig === 'undefined') {
-        {% set available_variations = [] %}
-        {% set available_editor_variations = [] %}
-
-        {% if content_type_identifier is defined and content_type_identifier %}
-        {% set available_variations = ngrm_available_variations(content_type_identifier, true) %}
-        {% set available_editor_variations = ngrm_available_variations(content_type_identifier) %}
-        {% endif %}
+        {% set available_variations = ngrm_available_variations('embed', true) %}
+        {% set available_editor_variations = ngrm_available_variations('embed') %}
 
         RemoteMediaConfig = {
             'paths': {
