--- a/bundle/Resources/views/ezadminui/js_config.html.twig
+++ b/bundle/Resources/views/ezadminui/js_config.html.twig
@@ -76,6 +76,8 @@
             'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
             'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
             'editor_insert_variations_label': "{{ "ngrm.edit.vue.editor_insert.variations.label"|trans }}",
+            'editor_insert_caption_label': "{{ "ngrm.edit.vue.editor_insert.caption.label"|trans }}",
+            'editor_insert_css_class_label': "{{ "ngrm.edit.vue.editor_insert.css_class.label"|trans }}",
             'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
             'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
             'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
