--- a/bundle/Resources/views/ezadminui/parts/edit/ezrichtext.html.twig
+++ b/bundle/Resources/views/ezadminui/parts/edit/ezrichtext.html.twig
@@ -9,7 +9,6 @@
     {% include '@NetgenRemoteMedia/ezadminui/js_config.html.twig' %}
 
     {% include '@NetgenRemoteMedia/ezadminui/parts/edit/editor_insert.html.twig' with {
-        'content_type_identifier': contentType.identifier,
-        'field_id': 'ezrichtext'
+        'field_id': '_ezrichtext'
     } %}
 {% endif %}
