NGSTACK-525 Cleanup and refactor assets

--- a/bundle/Resources/views/parts/edit/editor_insert.html.twig
+++ b/bundle/Resources/views/parts/edit/editor_insert.html.twig
@@ -32,7 +32,7 @@
     NgRemoteMediaAvailableEditorVariations_{{ field_id }} = {{ available_editor_variations|keys|json_encode|raw }};
 </script>
 
-<div class="ngremotemedia-type" data-id="{{ field_id }}" v-init:selected-image="NgRemoteMediaSelectedImage" v-init:config="NgRemoteMediaConfig">
+<div class="ngremotemedia-container" data-id="{{ field_id }}" v-init:selected-image="NgRemoteMediaSelectedImage" v-init:config="NgRemoteMediaConfig">
     <editor-insert-modal
         v-if="editorInsertModalOpen"
         @close="handleEditorInsertModalClose"
