--- a/bundle/Resources/views/ezadminui/parts/edit/editor_insert.html.twig
+++ b/bundle/Resources/views/ezadminui/parts/edit/editor_insert.html.twig
@@ -42,6 +42,7 @@
         :selected-image="selectedImage"
         :selected-editor-variation="selectedEditorVariation"
         :caption="caption"
+        :align="align"
         :css-class="cssClass"
     ></editor-insert-modal>
 </div>
