--- a/bundle/Resources/views/ezadminui/field_type/ezrichtext/custom_tag/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field_type/ezrichtext/custom_tag/ngremotemedia.html.twig
@@ -4,10 +4,11 @@
 {% set coords = params.coords|default('[]') %}
 {% set variation = params.variation|default(null) %}
 {% set caption = params.caption|default(null) %}
+{% set align = align|default(null) %}
 {% set css_class = params.cssclass|default(null) %}
 
 {% if resource_id and resource_type %}
-    <div class="ez-ngremotemedia{% if css_class %} {{ css_class }}{% endif %}">
+    <div class="ez-ngremotemedia{% if css_class %} {{ css_class }}{% endif %}{% if align %} object-{{ align }} align-{{ align }}{% endif %}">
         {% set resource = netgen_remote_media_embed(resource_id, resource_type, coords) %}
 
         {% if resource.resourceType == 'image' %}
