--- a/bundle/Resources/views/ezadminui/field_type/ezrichtext/custom_tag/ngremotemedia.html.twig
+++ b/bundle/Resources/views/ezadminui/field_type/ezrichtext/custom_tag/ngremotemedia.html.twig
@@ -8,10 +8,10 @@
 {% set css_class = params.cssclass|default(null) %}
 
 {% if resource_id and resource_type %}
-    <div class="ez-ngremotemedia{% if css_class %} {{ css_class }}{% endif %}{% if align %} object-{{ align }} align-{{ align }}{% endif %}">
-        {% set resource = netgen_remote_media_embed(resource_id, resource_type, coords) %}
+    {% set resource = netgen_remote_media_embed(resource_id, resource_type, coords) %}
 
-        {% if resource.resourceType == 'image' %}
+    <div class="ez-ngremotemedia remote-image-inline remote-{{ resource.mediaType }}{% if css_class %} {{ css_class }}{% endif %}{% if align %} object-{{ align }} align-{{ align }}{% endif %}">
+        {% if resource.mediaType == 'image' %}
             {% set image_url = resource.secure_url %}
             {% if variation %}
                 {% set variation = netgen_remote_variation_embed(resource, variation) %}
@@ -19,7 +19,7 @@
             {% endif %}
 
             <img src="{{ image_url }}" alt="{{ resource.metaData.alt_text }}">
-        {% elseif resource_type == 'video' %}
+        {% elseif resource.mediaType == 'video' %}
             {{ netgen_remote_video_embed(resource, variation)|raw }}
         {% else %}
             <a href="{{ netgen_remote_download(resource) }}">{{ resource.resourceId }}</a>
