--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -4,11 +4,9 @@
     if (typeof NgRemoteMediaTranslations === 'undefined') {
         NgRemoteMediaTranslations = {
             'browse_title': "{{ "ngrm.edit.vue.browse.title"|trans }}",
-            'browse_image_and_documents': "{{ "ngrm.edit.vue.browse.facets.image_and_documents"|trans }}",
-            'browse_video_and_audio': "{{ "ngrm.edit.vue.browse.facets.video_and_audio"|trans }}",
-            'browse_raw': "{{ "ngrm.edit.vue.browse.facets.raw"|trans }}",
-            'browse_select_media_type': "{{ "ngrm.edit.vue.browse.facets.select_media_type"|trans }}",
-            'browse_all_media_types': "{{ "ngrm.edit.vue.browse.facets.all_media_types"|trans }}",
+            'browse_select_type': "{{ "ngrm.edit.vue.browse.facets.select_type"|trans }}",
+            'browse_loading_types': "{{ "ngrm.edit.vue.browse.facets.loading_types"|trans }}",
+            'browse_all_types': "{{ "ngrm.edit.vue.browse.facets.all_types"|trans }}",
             'browse_select_folder': "{{ "ngrm.edit.vue.browse.facets.select_folder"|trans }}",
             'browse_loading_folders': "{{ "ngrm.edit.vue.browse.facets.loading_folders"|trans }}",
             'browse_all_folders': "{{ "ngrm.edit.vue.browse.facets.all_folders"|trans }}",
@@ -75,25 +73,16 @@
             'upload_button_create': "{{ "ngrm.edit.vue.upload.button.create"|trans }}",
             'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
             'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
-            'editor_insert_variations_label': "{{ "ngrm.edit.vue.editor_insert.variations.label"|trans }}",
-            'editor_insert_caption_label': "{{ "ngrm.edit.vue.editor_insert.caption.label"|trans }}",
-            'editor_insert_css_class_label': "{{ "ngrm.edit.vue.editor_insert.css_class.label"|trans }}",
-            'editor_insert_variations_original_image': "{{ "ngrm.edit.vue.editor_insert.variations.original_image"|trans }}",
-            'editor_insert_title': "{{ "ngrm.edit.vue.editor_insert.title"|trans }}",
-            'editor_insert_insert_button': "{{ "ngrm.edit.vue.editor_insert.button.insert"|trans }}",
-            'editor_insert_cancel_button': "{{ "ngrm.edit.vue.editor_insert.button.cancel"|trans }}",
         };
     }
 
     if (typeof NgRemoteMediaConfig === 'undefined') {
         NgRemoteMediaConfig = {
             'paths': {
-                'browse': '{{ path('netgen_remote_media_ezadmin_browse') }}',
-                'load_facets': '{{ path('netgen_remote_media_ezadmin_facets_load') }}',
-                'load_folders': '{{ path('netgen_remote_media_ezadmin_folder_load') }}',
-                'create_folder': '{{ path('netgen_remote_media_ezadmin_folder_create') }}',
-                'editor_fetch': '{{ path('netgen_remote_media_ezadmin_editor_fetch') }}',
-                'editor_insert': '{{ path('netgen_remote_media_ezadmin_editor_insert') }}',
+                'browse': '{{ path('netgen_remote_media_ajax_browse') }}',
+                'load_facets': '{{ path('netgen_remote_media_ajax_facets_load') }}',
+                'load_folders': '{{ path('netgen_remote_media_ajax_folder_load') }}',
+                'create_folder': '{{ path('netgen_remote_media_ajax_folder_create') }}',
             }
         };
     }
