--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -79,7 +79,7 @@
     if (typeof NgRemoteMediaConfig === 'undefined') {
         NgRemoteMediaConfig = {
             'paths': {
-                'browse': '{{ path('netgen_remote_media_ajax_browse') }}',
+                'browse_resources': '{{ path('netgen_remote_media_ajax_resource_browse') }}',
                 'load_facets': '{{ path('netgen_remote_media_ajax_facets_load') }}',
                 'load_folders': '{{ path('netgen_remote_media_ajax_folder_load') }}',
                 'create_folder': '{{ path('netgen_remote_media_ajax_folder_create') }}',
