NGGW-41 Implement proper handling of uploading existing resources on frontend

--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -80,6 +80,7 @@
         NgRemoteMediaConfig = {
             'paths': {
                 'browse_resources': '{{ path('netgen_remote_media_ajax_resource_browse') }}',
+                'upload_resources': '{{ path('netgen_remote_media_ajax_resource_upload') }}',
                 'load_facets': '{{ path('netgen_remote_media_ajax_facets_load') }}',
                 'load_folders': '{{ path('netgen_remote_media_ajax_folder_load') }}',
                 'create_folder': '{{ path('netgen_remote_media_ajax_folder_create') }}',
