--- a/bundle/Resources/views/js_config.html.twig
+++ b/bundle/Resources/views/js_config.html.twig
@@ -72,7 +72,10 @@
             'upload_button_select': "{{ "ngrm.edit.vue.upload.button.select"|trans }}",
             'upload_button_create': "{{ "ngrm.edit.vue.upload.button.create"|trans }}",
             'upload_button_save': "{{ "ngrm.edit.vue.upload.button.save"|trans }}",
+            'upload_button_use_existing_resource': "{{ "ngrm.edit.vue.upload.button.use_existing_resource"|trans }}",
+            'upload_checkbox_overwrite': "{{ "ngrm.edit.vue.upload.checkbox.overwrite"|trans }}",
             'upload_placeholder_new_folder': "{{ "ngrm.edit.vue.upload.placeholder.new_folder"|trans }}",
+            'upload_error_existing_resource': "{{ "ngrm.edit.vue.upload.error.existing_resource"|trans }}",
         };
     }
 
